[project]
name = "hypie"
version = "0.1.1.dev4"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Yasser Ahmed", email = "yasserfawzi1029@gmail.com" },
]
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dependencies = [
    "htpy>=26.5.1",
    "watchfiles>=1.2.0",
]

[project.urls]
Repository = "https://github.com/Infrared1029/hypie"

[project.scripts]
hypie = "hypie.cli.build_components:main"

[build-system]
requires = ["uv_build>=0.11.26,<0.12"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
]
examples = [
    "fastapi[standard]>=0.139.0",
    "requests>=2.34.2",
]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
